// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-iyvyFf buqCmU"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-GMQeP eMeBBV fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-cIShpX ePZXwN"
  >
    <div
      class="sc-kafWEX lodWKP"
    >
      <div
        class="sc-feJyhm cAiIIM"
      >
        <div
          class="sc-btzYZH sc-bYSBpT KaiKe"
        >
          ERROR
        </div>
        <h4
          class="sc-gxMtzJ igFjqJ"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iELTvK fyBIax"
      >
        <pre
          class="sc-gzOgki koMebR"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-jwKygS bjNzAC"
      >
        <a
          class="sc-cmTdod iOifeh"
        >
          <i
            class="sc-bAeIUo fcyBnj fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-cIShpX ePZXwN"
  >
    <div
      class="sc-kafWEX lodWKP"
    >
      <div
        class="sc-feJyhm cAiIIM"
      >
        <div
          class="sc-btzYZH sc-bYSBpT KaiKe"
        >
          ERROR
        </div>
        <h4
          class="sc-gxMtzJ igFjqJ"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iELTvK fyBIax"
      >
        <pre
          class="sc-gzOgki koMebR"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
